test/fail/classes/wrong_arg_count_class_method.lly
#[
SyntaxError: Wrong number of arguments to String.concat (4 for 2).
    from wrong_arg_count_class_method.lly:8
]#

var s: String = ""

s.concat(1, 2, 3)
